--- a/style.css
+++ b/style.css
@@ -1060,12 +1060,13 @@ fieldset {
 
 @media (min-width: 700px) {
 	header {
+		top: 0;
 		position: fixed;
 		z-index: 1000;
 		background-color: var(--clr-white);
 		width: 100%;
 		border-bottom: 2px solid var(--clr-rich-gray);
-		filter: drop-shadow(0px 1px 5px var(--clr-rich-black));
+		box-shadow: 0px 0px 5px var(--clr-rich-black);
 	}
 
 	main {
@@ -1086,10 +1087,11 @@ fieldset {
 		width: 100%;
 		justify-content: space-between;
 		align-items: center;
-		padding: 0.625rem 0;
+		padding: 0;
 		padding-left: 1.5em;
 		visibility: visible;
 		background-color: var(--clr-white);
+		line-height: 2.5;
 	}
 
 	.subheader__container .li__map {
